# opa-test

./: .bazelproject  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go  go.mod  go.sum  opa-config.yaml
bazel/: opa.bzl
cmd/: BUILD.bazel  cmd.go
internal/: tools.go
pkg/: BUILD.bazel  load.go  logger.go
pkg/cmd/: BUILD.bazel  package.go  register.go  run.go  serve.go
pkg/logging/: BUILD.bazel  global.go  logger.go  opa_sdk.go  writer.go
pkg/opa/: BUILD.bazel  load.go  load_test.go  serve.go
policies/: BUILD.bazel  allow_post.rego  allow_post_test.rego
