load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "cmd.go",
        "run.go",
    ],
    importpath = "github.com/michaelboulton/opa-test/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/logging",
        "//pkg/opa",
        "@com_github_open_policy_agent_opa//sdk",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
