load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "package.go",
        "run.go",
        "serve.go",
    ],
    importpath = "github.com/michaelboulton/opa-test/pkg/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logging",
        "//pkg/opa",
        "@com_github_open_policy_agent_opa//sdk",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_cobra//:cobra",
    ],
)
