load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logging",
    srcs = [
        "global.go",
        "logger.go",
        "opa_sdk.go",
        "writer.go",
    ],
    importpath = "github.com/michaelboulton/opa-test/pkg/logging",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_open_policy_agent_opa//logging",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
